// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Tabs 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3 + .bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c2 {
  overflow: auto;
}

.c4 {
  border: none;
  border-bottom: 0.25rem solid transparent;
  border-bottom-color: transparent;
  border-radius: 0;
  color: #3C64F4;
  pointer-events: auto;
  width: auto;
}

@media (min-width:720px) {
  .c3 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c3 {
    width: auto;
  }
}

<div
  class="c0 c1 c2"
  role="tablist"
>
  <button
    aria-controls="content1"
    aria-selected="false"
    class="c3 c4"
    id="tab1"
    role="tab"
    tabindex="0"
  >
    <span
      class="c5"
    >
      Tab 1
    </span>
  </button>
  <button
    aria-controls="content2"
    aria-selected="false"
    class="c3 c4"
    id="tab2"
    role="tab"
    tabindex="0"
  >
    <span
      class="c5"
    >
      Tab 2
    </span>
  </button>
</div>
`;

exports[`render Tabs with disabled item 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  align-content: stretch;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  display: flex;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3 + .bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c2 {
  overflow: auto;
}

.c4 {
  border: none;
  border-bottom: 0.25rem solid transparent;
  border-bottom-color: transparent;
  border-radius: 0;
  color: #3C64F4;
  pointer-events: auto;
  width: auto;
}

@media (min-width:720px) {
  .c3 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c3 {
    width: auto;
  }
}

<div
  class="c0 c1 c2"
  role="tablist"
>
  <button
    aria-controls="content1"
    aria-selected="false"
    class="c3 c4"
    id="tab1"
    role="tab"
    tabindex="0"
  >
    <span
      class="c5"
    >
      Tab 1
    </span>
  </button>
  <button
    aria-controls="content2"
    aria-selected="false"
    class="c3 c4"
    id="tab2"
    role="tab"
    tabindex="0"
  >
    <span
      class="c5"
    >
      Tab 2
    </span>
  </button>
  <button
    aria-controls="tab3-content"
    aria-selected="false"
    class="c3 c4"
    disabled=""
    id="tab3"
    role="tab"
    tabindex="0"
  >
    <span
      class="c5"
    >
      Tab 3
    </span>
  </button>
</div>
`;
